platform/kubernetes/overlays/qa/patches/ingress-qa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - rental-qa.techwizard-platformlab.com
      secretName: rental-qa-tls
  rules:
    - host: rental-qa.techwizard-platformlab.com
      http:
        paths:
          - path: /api/v1/rentals(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rental-service
                port:
                  number: 8001
          - path: /api/v1/ledger(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ledger-service
                port:
                  number: 8002
          - path: /api/v1/notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 8003
          - path: /api/v1/ai(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rag-api
                port:
                  number: 8004
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
